# eoc

./: README.md
hs/: CHANGELOG.md  eoc-hs.cabal
hs/src/Lang/Eoc/: Asm.hs  C.hs  CVar.hs  Free.hs  Parser.hs  R.hs  RVar.hs  Sexp.hs  Typecheck.hs  Types.hs
hs/src/Lang/Eoc/Asm/: AllocateRegisters.hs  Interference.hs  Interferences.hs  Liveness.hs  Moves.hs  PatchInstructions.hs  PreludeConclusion.hs  RemoveJmp.hs  SelectInstructions.hs  Types.hs
hs/src/Lang/Eoc/C/: ExplicateControl.hs  MergeBlocks.hs  PlaceBlocks.hs  Types.hs
hs/src/Lang/Eoc/R/: Rco.hs  RevealFunctions.hs  Shrink.hs  Typecheck.hs  Types.hs  UncoverGet.hs  Uniquify.hs
hs/test/: Main.hs  SexpTest.hs  Test2.hs  TestAsm.hs  TestMoves.hs  TestRegisterAllocation.hs
rv/: Makefile  entry.S  kernel.ld  main.S  main.c
