cabal-version:      3.14
name:               eoc-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             emliunix
maintainer:         emliunix@hotmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library eoc
    import:           warnings
    default-language: GHC2024
    hs-source-dirs:   src
    other-modules:    Lang.Eoc.RVar
                    , Lang.Eoc.CVar
                    , Lang.Eoc.Asm
                    , Lang.Eoc.Free
                    , Lang.Eoc.Types
    build-depends:    base
                    , transformers
                    , mtl

test-suite eoc-hs-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , hspec
                    , bytestring
                    , text
