cabal-version:      3.14
name:               eoc-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             emliunix
maintainer:         emliunix@hotmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library eoc
    import:           warnings
    default-language: GHC2024
    hs-source-dirs:   src
    exposed-modules:  Lang.Eoc.RVar
                    , Lang.Eoc.CVar
                    , Lang.Eoc.Asm
                    , Lang.Eoc.Sexp
                    , Lang.Eoc.Parser
                    , Lang.Eoc.R
                    , Lang.Eoc.R.Types
                    , Lang.Eoc.R.Uniquify
                    , Lang.Eoc.R.Shrink
                    , Lang.Eoc.R.UncoverGet
                    , Lang.Eoc.R.Rco
                    , Lang.Eoc.R.RevealFunctions
                    , Lang.Eoc.R.Typecheck
                    , Lang.Eoc.C
                    , Lang.Eoc.C.Types
                    , Lang.Eoc.C.ExplicateControl
                    , Lang.Eoc.C.PlaceBlocks
                    , Lang.Eoc.C.MergeBlocks
                    , Lang.Eoc.Asm.Types
                    , Lang.Eoc.Asm.SelectInstructions
                    , Lang.Eoc.Asm.Liveness
                    , Lang.Eoc.Asm.Moves
                    , Lang.Eoc.Asm.Interferences
                    , Lang.Eoc.Asm.AllocateRegisters
                    , Lang.Eoc.Asm.PatchInstructions
                    , Lang.Eoc.Asm.PreludeConclusion
                    , Lang.Eoc.Asm.RemoveJmp
                    , Lang.Eoc.Free
                    , Lang.Eoc.Types
    build-depends:    base
                    , transformers
                    , mtl
                    , trifecta
                    , containers
                    , equivalence

test-suite eoc-test
    import:           warnings
    default-language: GHC2024
    other-modules:    Test2
                    , SexpTest
                    , TestAsm
                    , TestMoves
                    , TestRegisterAllocation
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , hspec
                    , bytestring
                    , text
                    , trifecta
                    , containers
                    , eoc-hs:eoc
